@@ -1,0 +1,2 @@
+.. automodule:: MDAnalysis.topology.ExtendedPDBParser
+   :members:
