@@ -39,7 +39,9 @@ The rules for this file:
   * Can load multiple trajectories as Universe(topology, traj2, traj2,
     ...) in addition to providing all trajectories as a list,
     i.e. Universe(topology, [traj1, traj2, ...])
-  * Added support for YASP and IBIsCO formats (.trz)
+  * added support for YASP and IBIsCO formats (.trz) (Issue 152)
+  * added non-standard "extended" PDB format (XPDB) that reads
+    five-digit residue numbers
 
   Changes
 
